fixed the spacing

--- a/style.css
+++ b/style.css
@@ -132,9 +132,9 @@ footer p {
 }
 
 .list_align {
-  display: flex;
-  flex-direction: row;
+  display: row;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 
 .description {
@@ -149,7 +149,11 @@ li {
 .bold {
   font-weight: 600;
   color: #344563;
-  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.bold2 {
+  padding-right: 5px;
 }
 
 .heading {
@@ -476,6 +480,10 @@ input[type="message"] {
     flex-direction: row;
     border-radius: 24px;
     margin-right: 50px;
+  }
+
+  .bold2 {
+    padding-right: 5px;
   }
 
   .whitebox:nth-child(even) .imageclass {
